3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/skills.c: Change it so that jeweler skill is used to identify
   amulets, not alchemy skill.
MSW 2005-04-27

Apply patch 1190107 so server compiles on HURD.
common/porting.c: Add define for MAXPATHLEN
socket/init.c: Add check for __GNU__ for setsockopt()
MSW 2005-04-27

Change to have objects generated by creator properly fixed up (material,
for potions, spell object, etc).
---
common/treasure.c: add GT_MINIMAL flag to change_treasure() to do minimal
   processing for objects created.
include/treasure.h: Add GT_MINIMAL define.
server/apply.c:  Add call to fix_generated_item() in convert_item()
MSW 2005-04-27

Various minor bugfixes.
common/los.c: Patch to fix negative lighting.  Use isqrt instead of sqrt,
  so we only want integer values anyways.
include/libproto.h, include/sproto.h: Rebuilt as there were some improperly
   matching prototypes.
random_maps/rogue_layout.c: Replace sqrt with isqrt calls.
server/c_misc.c: Make name_cmp() a static declaration so it won't be put
   in the sproto.h file.
server/init.c: Remove /* within comment string.
server/monster.c: Change sqrt to isqrt
MSW 2005-04-16

Those changes are just changing char* to const char* in some function
prototypes.
Affected files:
 common/recipe.c
 common/region.c
 common/treasure.c
 common/utils.c
 include/libproto.h: match headers.
 server/main.c
Ryo 2005-04-16

Those changes add the ability to transform items through 'item_transformer'
 (163)-type items
 See doc/Developers/item_transformation for more info.
common/item.c: don't display 'slaying' field for food.
include/define.h: add new 'ITEM_TRANSFORMER' type.