@@ -12,9 +12,9 @@ void remove_contents(object *first_ob, object *save_item);
 int calc_alch_danger(object *caster, object *cauldron, recipe *rp);
 /* apply.c */
 int apply_potion(object *op, object *tmp);
-int check_item(object *op, char *item);
+int check_item(object *op, const char *item);
 int check_weapon_power(object *who, int improvs);
-int improve_weapon_stat(object *op, object *improver, object *weapon, signed char *stat, int sacrifice_count, char *statname);
+int improve_weapon_stat(object *op, object *improver, object *weapon, signed char *stat, int sacrifice_count, const char *statname);
 int prepare_weapon(object *op, object *improver, object *weapon);
 int improve_weapon(object *op, object *improver, object *weapon);
 int check_improve_weapon(object *op, object *tmp);
@@ -24,7 +24,7 @@ int apply_container(object *op, object *sack);
 int esrv_apply_container(object *op, object *sack);
 void move_apply(object *trap, object *victim, object *originator);
 void do_learn_spell(object *op, object *spell, int special_prayer);
-void do_forget_spell(object *op, char *spell);
+void do_forget_spell(object *op, const char *spell);
 void apply_scroll(object *op, object *tmp, int dir);
 int dragon_eat_flesh(object *op, object *meal);
 void apply_poison(object *op, object *tmp);
@@ -68,7 +68,7 @@ void deathstrike_player(object *op, object *hitter, int *dam);
 int adj_attackroll(object *hitter, object *target);
 int is_aimed_missile(object *op);
 /* ban.c */
-int checkbanned(char *login, char *host);
+int checkbanned(const char *login, const char *host);
 /* build_map.c */
 void remove_marking_runes(struct mapdef *map, short x, short y);
 int find_unused_connected_value(struct mapdef *map);
@@ -764,8 +764,8 @@ int SP_level_spellpoint_cost(object *caster, object *spell, int flags);
 int SP_level_dam_adjust(object *caster, object *spob);
 int SP_level_duration_adjust(object *caster, object *spob);
 int SP_level_range_adjust(object *caster, object *spob);
-object *check_spell_known(object *op, char *name);
-object *lookup_spell_by_name(object *op, char *spname);
+object *check_spell_known(object *op, const char *name);
+object *lookup_spell_by_name(object *op, const char *spname);
 int reflwall(mapstruct *m, int x, int y, object *sp_op);
 int cast_create_obj(object *op, object *caster, object *new_op, int dir);
 int ok_to_put_more(mapstruct *m, sint16 x, sint16 y, object *op, int immune_stop);
