@@ -17,6 +17,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Change some char* to const char*, when values shouldn't be changed. Changed files:
+ * include/sproto.h
+ * server/apply.c
+ * server/ban.c
+ * server/spell_util.c
+Ryo 2005-04-27
+
 server/skills.c: Change it so that jeweler skill is used to identify
    amulets, not alchemy skill.
 MSW 2005-04-27
